--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ pygments: true
 # so be sure to set them if your theme uses them.
 #
 title : Daniel Nishimura
-tagline: Polygot Techie
+tagline: Polyglot
 author :
   name : Daniel Nishimura
   email : dnishimura@gmail.com
